# spitfire

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  splitty.py
src/: error.rs  main.rs  mapper.rs  reducer.rs  writer.rs
src/mapper/: helpers.rs
