[package]
name = "tinymapreduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-lock = "2.1.10"
futures = "0.3.29"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
tokio = { version = "1.35.0", features = ["full"] }
